fixed z-index on dropdown

--- a/src/components/App/Header/Burger/style.scss
+++ b/src/components/App/Header/Burger/style.scss
@@ -9,6 +9,7 @@
   height: vars.$main-height;
   padding: vars.$gutter;
   transition: 1.5s;
+  z-index: 998;
 
   &__list {
 
